[build-system]
requires = ["setuptools>= 77.0"]
build-backend = "setuptools.build_meta"



[project]
name = "simple-http-checker"
version="0.1.0"
description = "A simple CLI tool to check the status od URLs."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>2.28,<3.0",
    "click>=8.0, <9.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
    "black",
    "mypy",
    "bandit",
    "types-requests"
]

[project.scripts]
check-urls = "simple_http_checker.cli:main"

[tool.ruff]
line-length = 65

[tool.black]
line-length = 65

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [".venv", "__pycache__", "build", "dist"]

[tool.pytest.ini_options]
addopts = "-rA -s -v"