[build-system]
requires = ["setuptools>= 77.0"]
build-backend = "setuptools.build_meta"



[project]
name = "simple-http-checker"
version="0.1.0"
description = "A simple CLI tool to check the status od URLs."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>2.28,<3.0",
    "click>=8.0, <9.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
    "black",
    "mypy",
    "bandit",
    "types-requests",
]

[project.scripts]
check-urls = "simple_http_checker.cli:main"

[tool.ruff]
line-length = 65

[tool.black]
line-length = 65

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [".venv", "__pycache__", "build", "dist","tests", "docs", "examples"]

[tool.pytest.ini_options]
addopts = "-rA -s -v"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "pip install build && python -m build"
dist_path = "dist/"
upload_to_pypi = false
upload_to_release = true
hvcs = "github"
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test"
]

minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

